# dungeon-rs

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  main.rs  state.rs
crates/backend/src/api/: apply_move.rs  game_state.rs  mod.rs  new_game.rs
crates/backend/tests/: README.md  integration_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: mod.rs  play.rs
crates/cli/src/tui/: mod.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: actor.rs  actor_kind.rs  actor_stats.rs  direction.rs  events.rs  game_state.rs  lib.rs  player.rs  position.rs  rng.rs  step_result.rs  walk_map.rs
crates/corelib/src/actions/: mod.rs  player_attack.rs  player_equip_item.rs  player_move.rs  player_unequip_item.rs  try_attack.rs  try_move.rs
crates/corelib/src/actors/: actor.rs  kind.rs  mod.rs  stats.rs
crates/corelib/src/ai/: mod.rs  simple.rs
crates/corelib/src/array2d/: array.rs  iterator.rs  mod.rs
crates/corelib/src/catalog/: effects.rs  instance.rs  items.rs  mod.rs
crates/corelib/src/diff/: builder.rs  mod.rs  state.rs  utils.rs
crates/corelib/src/dungeon/: dungeon_map.rs  mod.rs  (+2 more)
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: actions.rs  diff.rs  directions.rs  entity_id.rs  event.rs  lib.rs  position.rs  state.rs  step.rs
crates/transport/: Cargo.toml
crates/transport/src/: client.rs  error.rs  lib.rs
(+25 files in other folders)
