[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
engine = { version = "0.1.0", path = "../engine" }
lru = "0.16.0"
protocol = { version = "0.1.0", path = "../protocol" }
serde = "1.0.219"
tokio = { version = "1.0", features = ["sync"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-web = { version = "4.11.0", features = ["macros"] }
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
serde_json = "1.0"
